--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
 <body>
 
     <header>  
-        <nav class="navbar bg-light fixed-top">
+        <nav class="navbar bg-light fixed-top d-flex flex-nowrap">
             <div class="container-fluid d-flex flex-column align-items-center">
                 <div><input type="text" class="search-input search-button" placeholder="Search..." id="search" /> 
                   <button type="button" class="btn btn-success p-2 mb-1" onclick="searchValue()">Search</button></div>
             </div>
+            <div id="cart-icon" class="me-5">
+              <a href="#"><i class="fa-solid fa-cart-shopping"></i> <span class="cart-count">0</span></a>
+          </div>
           </nav>   
     </header>
 
