--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>  
         <nav class="navbar bg-light fixed-top d-flex flex-nowrap">
             <div class="container-fluid d-flex flex-column align-items-center">
-                <div><input type="text" class="search-input search-button" placeholder="Search..." id="search" /> 
+                <div class="flex-nowrap"><input type="text" class="search-input search-button w-50" placeholder="Search..." id="search" /> 
                   <button type="button" class="btn btn-success p-2 mb-1" onclick="searchValue()">Search</button></div>
             </div>
             <div id="cart-icon" class="me-5">
