--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
    
     <link rel="stylesheet" href="style.css">
-    <title>To_do_list</title>
+    <title>Product_finder</title>
 </head>
 <body>
 
@@ -24,7 +24,7 @@
                   <button type="button" class="btn btn-success p-2 mb-1" onclick="searchValue()">Search</button></div>
             </div>
             <div id="cart-icon" class="me-5">
-              <a href="#"><i class="fa-solid fa-cart-shopping"></i> <span class="cart-count">0</span></a>
+              <a href="Cart.html"><i class="fa-solid fa-cart-shopping"></i> <span class="cart-count">0</span></a>
           </div>
           </nav>   
     </header>
