--- a/Cart.html
+++ b/Cart.html
@@ -56,7 +56,7 @@
                                     <p class="card-title"><strong>Item Name:</strong> ${product.title}</p>
                                     <p class="card-text"><strong>Price:</strong> $${product.price}</p>
                                 </div>
-                                <button onclick="removeFromCart('${itemId}')" class="btn btn-danger">Remove</button>
+                                <button onclick="removeFromCart('${itemId}')" class="btn btn-danger mt-4 p-0">Remove</button>
                             </div>
                         </div>
                     `;
