--- a/Cart.html
+++ b/Cart.html
@@ -70,9 +70,9 @@
                            <div  class="col-md-9">
                             <div class="card-body d-flex flex-column justify-content-between">
                                 <div>
-                                    <p class="card-title"><strong>Item Name:</strong> ${product.title}</p>
-                                    <p class="card-text"><strong>Price:</strong> ${product.price}</p>
-                                    <p class="card-text"><strong>Description:</strong> ${truncateText(product.description, 50)}</p>
+                                    <p class="card-title"><strong>${product.title}</strong></p>
+                                    <p class="card-text"><strong>Price:$</strong> ${product.price}</p>
+                                    <p class="card-text">${truncateText(product.description, 50)}</p>
                                 </div>
                                    
                                     <button onclick="removeFromCart('${itemId}')" class="btn" style="position: absolute; top: -18px; right: -15px;">
