--- a/Cart.html
+++ b/Cart.html
@@ -70,8 +70,8 @@
                            <div  class="col-md-9">
                             <div class="card-body d-flex flex-column justify-content-between">
                                 <div>
-                                    <p class="card-title"><strong>${product.title}</strong></p>
-                                    <p class="card-text"><strong>Price:$</strong> ${product.price}</p>
+                                    <p class="card-title fs-5"><strong>${product.title}</strong></p>
+                                    <p class="card-text fs-6"><strong>Price:$</strong> ${product.price}</p>
                                     <p class="card-text">${truncateText(product.description, 50)}</p>
                                 </div>
                                    
